contracts/test/valid/Multiply.sol
pragma solidity ^0.4.17;

contract Multiply {
    function multiply(uint a, uint b) pure public returns (uint256) {
        return a * b;
    }
}